--- a/server/index.css
+++ b/server/index.css
@@ -7,6 +7,8 @@
 }
 body {
   font: 13px Helvetica, Arial;
+  background-image: url(images/fruits.jpeg);
+  background-repeat: no-repeat repeat;
 }
 form {
   background: #000;
