attempted username add

--- a/server/index.css
+++ b/server/index.css
@@ -29,6 +29,19 @@ form button {
   border: none;
   padding: 10px; }
 
+button {
+  width: 9%;
+  background: rgb(130, 224, 255);
+  border: none;
+  padding: 10px; }
+
+input {
+  border: 0;
+  padding: 10px;
+  width: 30%;
+  margin-right: 5%;
+}
+
 #messages {
   list-style-type: none;
   margin: 0;
